# robotino-ros2-webots-simulation

./: package.xml  setup.py
launch/: robotino_launch.py
resource/: robotino_3.urdf
robotino_driver/: robotino_driver.py  setup.cfg  setup.py
robotino_driver/protos/: CameraHandle.proto
robotino_driver/worlds/: .test_site.wbproj  test_site.wbt
robotino_interfaces/: CMakeLists.txt  package.xml
robotino_interfaces/msg/: DistanceSensorVoltages.msg  MotorCurrents.msg  MotorPositions.msg  MotorVelocities.msg
worlds/: test_site.wbt
